[project]
name = "expense-report-mcp"
version = "0.1.0"
description = "MCP server for extracting receipt data and generating expense reports"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project.scripts]
expense-report-mcp = "server:main"
